--- a/public/index.html
+++ b/public/index.html
@@ -124,6 +124,7 @@
         /* Checkbox-Liste Styling */
         .checkbox-list {
             display: flex;
+            flex-wrap: wrap;
             gap: 10px;
             margin-top: 20px;
         }
@@ -133,6 +134,30 @@
             align-items: center;
             gap: 5px;
             cursor: pointer;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 1.5em;
+            }
+
+            form {
+                width: 100%;
+                padding: 15px;
+            }
+
+            .checkbox-list {
+                flex-direction: column;
+            }
+
+            table {
+                font-size: 0.7em;
+            }
+
+            th, td {
+                padding: 8px;
+            }
         }
     </style>
 </head>
