--- a/public/index.html
+++ b/public/index.html
@@ -180,6 +180,7 @@
         <label><input type="checkbox" id="showConsumptionSinceLastReading" checked>Verbrauch seit letzter Messung</label>
         <label><input type="checkbox" id="showForecast" checked>Prognose</label>
         <label><input type="checkbox" id="showForecastConsumption" checked>Prognose-Verbrauch</label>
+        <label><input type="checkbox" id="showTotalForecastConsumption" checked>Gesamt-Prognose-Verbrauch</label>
         <label><input type="checkbox" id="showDeviation" checked>Abweichung %</label>
         <label><input type="checkbox" id="showAverageDailyConsumption" checked>Ø tägl. Verbrauch seit letzter Messung</label>
         <label><input type="checkbox" id="showForecastDailyConsumption" checked>Prognostizierter Verbrauch pro Tag</label>
@@ -205,6 +206,7 @@
                     <th class="consumptionSinceLastReading">Verbrauch seit letzter Messung</th>
                     <th class="forecast">Prognose</th>
                     <th class="forecastConsumption">Prognose-Verbrauch</th>
+                    <th class="totalForecastConsumption">Gesamt-Prognose-Verbrauch</th>
                     <th class="deviation">Abweichung %</th>
                     <th class="averageDailyConsumption">Ø tägl. Verbrauch seit letzter Messung</th>
                     <th class="forecastDailyConsumption">Prognostizierter Verbrauch pro Tag</th>
@@ -294,6 +296,11 @@
             return (forecastValue - baseValue).toFixed(3);
         }
 
+        function calculateTotalForecastConsumption(forecastValue) {
+            const baseValue = startValues[2024];
+            return (forecastValue - baseValue).toFixed(3);
+        }
+
         function calculateDeviation(consumption, forecastConsumption) {
             if (forecastConsumption === 0) return "N/A";
             const deviation = (consumption / forecastConsumption) - 1;
@@ -339,6 +346,7 @@
                         const consumptionSinceLastReadingCell = document.createElement('td');
                         const forecastCell = document.createElement('td');
                         const forecastConsumptionCell = document.createElement('td');
+                        const totalForecastConsumptionCell = document.createElement('td');
                         const deviationCell = document.createElement('td');
                         const averageDailyConsumptionCell = document.createElement('td');
                         const forecastDailyConsumptionCell = document.createElement('td');
@@ -353,6 +361,7 @@
                         const forecastValue = parseFloat(calculateForecast(entry.timestamp));
                         const consumptionValue = parseFloat(calculateConsumption(parseFloat(entry.reading), year));
                         const forecastConsumptionValue = parseFloat(calculateForecastConsumption(forecastValue, year));
+                        const totalForecastConsumptionValue = parseFloat(calculateTotalForecastConsumption(forecastValue));
                         const deviationValue = calculateDeviation(consumptionValue, forecastConsumptionValue);
 
                         dateCell.textContent = formattedDate;
@@ -360,6 +369,7 @@
                         consumptionCell.textContent = consumptionValue.toFixed(3);
                         forecastCell.textContent = forecastValue.toFixed(3);
                         forecastConsumptionCell.textContent = forecastConsumptionValue.toFixed(3);
+                        totalForecastConsumptionCell.textContent = totalForecastConsumptionValue.toFixed(3);
                         deviationCell.textContent = deviationValue;
 
                         applyDeviationColor(deviationCell, parseFloat(deviationValue));
@@ -407,6 +417,7 @@
                         row.appendChild(consumptionSinceLastReadingCell);
                         row.appendChild(forecastCell);
                         row.appendChild(forecastConsumptionCell);
+                        row.appendChild(totalForecastConsumptionCell);
                         row.appendChild(deviationCell);
                         row.appendChild(averageDailyConsumptionCell);
                         row.appendChild(forecastDailyConsumptionCell);
@@ -487,10 +498,19 @@
                         localStorage.setItem('showForecastConsumption', this.checked);
                     });
 
+                    document.getElementById('showTotalForecastConsumption').addEventListener('change', function() {
+                        document.querySelectorAll('.totalForecastConsumption').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[8];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showTotalForecastConsumption', this.checked);
+                    });
+
                     document.getElementById('showDeviation').addEventListener('change', function() {
                         document.querySelectorAll('.deviation').forEach(cell => cell.style.display = this.checked ? '' : 'none');
                         document.querySelectorAll('tbody tr').forEach(row => {
-                            const cell = row.children[8];
+                            const cell = row.children[9];
                             cell.style.display = this.checked ? '' : 'none';
                         });
                         localStorage.setItem('showDeviation', this.checked);
@@ -499,7 +519,7 @@
                     document.getElementById('showAverageDailyConsumption').addEventListener('change', function() {
                         document.querySelectorAll('.averageDailyConsumption').forEach(cell => cell.style.display = this.checked ? '' : 'none');
                         document.querySelectorAll('tbody tr').forEach(row => {
-                            const cell = row.children[9];
+                            const cell = row.children[10];
                             cell.style.display = this.checked ? '' : 'none';
                         });
                         localStorage.setItem('showAverageDailyConsumption', this.checked);
@@ -508,7 +528,7 @@
                     document.getElementById('showForecastDailyConsumption').addEventListener('change', function() {
                         document.querySelectorAll('.forecastDailyConsumption').forEach(cell => cell.style.display = this.checked ? '' : 'none');
                         document.querySelectorAll('tbody tr').forEach(row => {
-                            const cell = row.children[10];
+                            const cell = row.children[11];
                             cell.style.display = this.checked ? '' : 'none';
                         });
                         localStorage.setItem('showForecastDailyConsumption', this.checked);
@@ -517,7 +537,7 @@
                     document.getElementById('showActions').addEventListener('change', function() {
                         document.querySelectorAll('.actions').forEach(cell => cell.style.display = this.checked ? '' : 'none');
                         document.querySelectorAll('tbody tr').forEach(row => {
-                            const cell = row.children[11];
+                            const cell = row.children[12];
                             cell.style.display = this.checked ? '' : 'none';
                         });
                         localStorage.setItem('showActions', this.checked);
@@ -532,6 +552,7 @@
                     document.getElementById('showConsumptionSinceLastReading').checked = localStorage.getItem('showConsumptionSinceLastReading') === 'true';
                     document.getElementById('showForecast').checked = localStorage.getItem('showForecast') === 'true';
                     document.getElementById('showForecastConsumption').checked = localStorage.getItem('showForecastConsumption') === 'true';
+                    document.getElementById('showTotalForecastConsumption').checked = localStorage.getItem('showTotalForecastConsumption') === 'true';
                     document.getElementById('showDeviation').checked = localStorage.getItem('showDeviation') === 'true';
                     document.getElementById('showAverageDailyConsumption').checked = localStorage.getItem('showAverageDailyConsumption') === 'true';
                     document.getElementById('showForecastDailyConsumption').checked = localStorage.getItem('showForecastDailyConsumption') === 'true';
@@ -546,6 +567,7 @@
                     document.getElementById('showConsumptionSinceLastReading').dispatchEvent(new Event('change'));
                     document.getElementById('showForecast').dispatchEvent(new Event('change'));
                     document.getElementById('showForecastConsumption').dispatchEvent(new Event('change'));
+                    document.getElementById('showTotalForecastConsumption').dispatchEvent(new Event('change'));
                     document.getElementById('showDeviation').dispatchEvent(new Event('change'));
                     document.getElementById('showAverageDailyConsumption').dispatchEvent(new Event('change'));
                     document.getElementById('showForecastDailyConsumption').dispatchEvent(new Event('change'));
