--- a/public/index.html
+++ b/public/index.html
@@ -177,6 +177,7 @@
         <label><input type="checkbox" id="showDaysSinceLastReading" checked>Tage seit letzter Messung</label>
         <label><input type="checkbox" id="showMeterReading" checked>Zählerstand</label>
         <label><input type="checkbox" id="showConsumption" checked>Verbrauch</label>
+        <label><input type="checkbox" id="showTotalConsumption" checked>Gesamt-Verbrauch</label>
         <label><input type="checkbox" id="showConsumptionSinceLastReading" checked>Verbrauch seit letzter Messung</label>
         <label><input type="checkbox" id="showForecast" checked>Prognose</label>
         <label><input type="checkbox" id="showTotalForecast" checked>Gesamt-Prognose</label>
@@ -204,6 +205,7 @@
                     <th class="daysSinceLastReading">Tage seit letzter Messung</th>
                     <th class="meterReading">Zählerstand</th>
                     <th class="consumption">Verbrauch</th>
+                    <th class="totalConsumption">Gesamt-Verbrauch</th>
                     <th class="consumptionSinceLastReading">Verbrauch seit letzter Messung</th>
                     <th class="forecast">Prognose</th>
                     <th class="totalForecast">Gesamt-Prognose</th>
@@ -335,6 +337,11 @@
             return (meterReading - baseValue).toFixed(3);
         }
 
+        function calculateTotalConsumption(meterReading) {
+            const baseValue = startValues[2024]; // Immer Startwert 2024 verwenden
+            return (meterReading - baseValue).toFixed(3);
+        }
+
         function calculateForecastConsumption(forecastValue, year) {
             const baseValue = startValues[year] || startValues[2024];
             return (forecastValue - baseValue).toFixed(3);
@@ -387,6 +394,7 @@
                         const daysSinceLastReadingCell = document.createElement('td');
                         const readingCell = document.createElement('td');
                         const consumptionCell = document.createElement('td');
+                        const totalConsumptionCell = document.createElement('td');
                         const consumptionSinceLastReadingCell = document.createElement('td');
                         const forecastCell = document.createElement('td');
                         const totalForecastCell = document.createElement('td');
@@ -406,6 +414,7 @@
                         const forecastValue = parseFloat(calculateForecast(entry.timestamp));
                         const totalForecastValue = parseFloat(calculateTotalForecast(entry.timestamp));
                         const consumptionValue = parseFloat(calculateConsumption(parseFloat(entry.reading), year));
+                        const totalConsumptionValue = parseFloat(calculateTotalConsumption(parseFloat(entry.reading)));
                         const forecastConsumptionValue = parseFloat(calculateForecastConsumption(forecastValue, year));
                         const totalForecastConsumptionValue = parseFloat(calculateTotalForecastConsumption(totalForecastValue));
                         const deviationValue = calculateDeviation(consumptionValue, forecastConsumptionValue);
@@ -413,6 +422,7 @@
                         dateCell.textContent = formattedDate;
                         readingCell.textContent = parseFloat(entry.reading).toFixed(3);
                         consumptionCell.textContent = consumptionValue.toFixed(3);
+                        totalConsumptionCell.textContent = totalConsumptionValue.toFixed(3);
                         forecastCell.textContent = forecastValue.toFixed(3);
                         totalForecastCell.textContent = totalForecastValue.toFixed(3);
                         forecastConsumptionCell.textContent = forecastConsumptionValue.toFixed(3);
@@ -461,6 +471,7 @@
                         row.appendChild(daysSinceLastReadingCell);
                         row.appendChild(readingCell);
                         row.appendChild(consumptionCell);
+                        row.appendChild(totalConsumptionCell);
                         row.appendChild(consumptionSinceLastReadingCell);
                         row.appendChild(forecastCell);
                         row.appendChild(totalForecastCell);
@@ -519,10 +530,19 @@
                         localStorage.setItem('showConsumption', this.checked);
                     });
 
+                    document.getElementById('showTotalConsumption').addEventListener('change', function() {
+                        document.querySelectorAll('.totalConsumption').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[5];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showTotalConsumption', this.checked);
+                    });
+
                     document.getElementById('showConsumptionSinceLastReading').addEventListener('change', function() {
                         document.querySelectorAll('.consumptionSinceLastReading').forEach(cell => cell.style.display = this.checked ? '' : 'none');
                         document.querySelectorAll('tbody tr').forEach(row => {
-                            const cell = row.children[5];
+                            const cell = row.children[6];
                             cell.style.display = this.checked ? '' : 'none';
                         });
                         localStorage.setItem('showConsumptionSinceLastReading', this.checked);
@@ -531,7 +551,7 @@
                     document.getElementById('showForecast').addEventListener('change', function() {
                         document.querySelectorAll('.forecast').forEach(cell => cell.style.display = this.checked ? '' : 'none');
                         document.querySelectorAll('tbody tr').forEach(row => {
-                            const cell = row.children[6];
+                            const cell = row.children[7];
                             cell.style.display = this.checked ? '' : 'none';
                         });
                         localStorage.setItem('showForecast', this.checked);
@@ -540,7 +560,7 @@
                     document.getElementById('showTotalForecast').addEventListener('change', function() {
                         document.querySelectorAll('.totalForecast').forEach(cell => cell.style.display = this.checked ? '' : 'none');
                         document.querySelectorAll('tbody tr').forEach(row => {
-                            const cell = row.children[7];
+                            const cell = row.children[8];
                             cell.style.display = this.checked ? '' : 'none';
                         });
                         localStorage.setItem('showTotalForecast', this.checked);
@@ -549,7 +569,7 @@
                     document.getElementById('showForecastConsumption').addEventListener('change', function() {
                         document.querySelectorAll('.forecastConsumption').forEach(cell => cell.style.display = this.checked ? '' : 'none');
                         document.querySelectorAll('tbody tr').forEach(row => {
-                            const cell = row.children[8];
+                            const cell = row.children[9];
                             cell.style.display = this.checked ? '' : 'none';
                         });
                         localStorage.setItem('showForecastConsumption', this.checked);
@@ -558,7 +578,7 @@
                     document.getElementById('showTotalForecastConsumption').addEventListener('change', function() {
                         document.querySelectorAll('.totalForecastConsumption').forEach(cell => cell.style.display = this.checked ? '' : 'none');
                         document.querySelectorAll('tbody tr').forEach(row => {
-                            const cell = row.children[9];
+                            const cell = row.children[10];
                             cell.style.display = this.checked ? '' : 'none';
                         });
                         localStorage.setItem('showTotalForecastConsumption', this.checked);
@@ -567,7 +587,7 @@
                     document.getElementById('showDeviation').addEventListener('change', function() {
                         document.querySelectorAll('.deviation').forEach(cell => cell.style.display = this.checked ? '' : 'none');
                         document.querySelectorAll('tbody tr').forEach(row => {
-                            const cell = row.children[10];
+                            const cell = row.children[11];
                             cell.style.display = this.checked ? '' : 'none';
                         });
                         localStorage.setItem('showDeviation', this.checked);
@@ -576,7 +596,7 @@
                     document.getElementById('showAverageDailyConsumption').addEventListener('change', function() {
                         document.querySelectorAll('.averageDailyConsumption').forEach(cell => cell.style.display = this.checked ? '' : 'none');
                         document.querySelectorAll('tbody tr').forEach(row => {
-                            const cell = row.children[11];
+                            const cell = row.children[12];
                             cell.style.display = this.checked ? '' : 'none';
                         });
                         localStorage.setItem('showAverageDailyConsumption', this.checked);
@@ -585,7 +605,7 @@
                     document.getElementById('showForecastDailyConsumption').addEventListener('change', function() {
                         document.querySelectorAll('.forecastDailyConsumption').forEach(cell => cell.style.display = this.checked ? '' : 'none');
                         document.querySelectorAll('tbody tr').forEach(row => {
-                            const cell = row.children[12];
+                            const cell = row.children[13];
                             cell.style.display = this.checked ? '' : 'none';
                         });
                         localStorage.setItem('showForecastDailyConsumption', this.checked);
@@ -594,7 +614,7 @@
                     document.getElementById('showActions').addEventListener('change', function() {
                         document.querySelectorAll('.actions').forEach(cell => cell.style.display = this.checked ? '' : 'none');
                         document.querySelectorAll('tbody tr').forEach(row => {
-                            const cell = row.children[13];
+                            const cell = row.children[14];
                             cell.style.display = this.checked ? '' : 'none';
                         });
                         localStorage.setItem('showActions', this.checked);
@@ -606,6 +626,7 @@
                     document.getElementById('showDaysSinceLastReading').checked = localStorage.getItem('showDaysSinceLastReading') === 'true';
                     document.getElementById('showMeterReading').checked = localStorage.getItem('showMeterReading') === 'true';
                     document.getElementById('showConsumption').checked = localStorage.getItem('showConsumption') === 'true';
+                    document.getElementById('showTotalConsumption').checked = localStorage.getItem('showTotalConsumption') === 'true';
                     document.getElementById('showConsumptionSinceLastReading').checked = localStorage.getItem('showConsumptionSinceLastReading') === 'true';
                     document.getElementById('showForecast').checked = localStorage.getItem('showForecast') === 'true';
                     document.getElementById('showTotalForecast').checked = localStorage.getItem('showTotalForecast') === 'true';
@@ -622,6 +643,7 @@
                     document.getElementById('showDaysSinceLastReading').dispatchEvent(new Event('change'));
                     document.getElementById('showMeterReading').dispatchEvent(new Event('change'));
                     document.getElementById('showConsumption').dispatchEvent(new Event('change'));
+                    document.getElementById('showTotalConsumption').dispatchEvent(new Event('change'));
                     document.getElementById('showConsumptionSinceLastReading').dispatchEvent(new Event('change'));
                     document.getElementById('showForecast').dispatchEvent(new Event('change'));
                     document.getElementById('showTotalForecast').dispatchEvent(new Event('change'));
